Switching from Layered Architecture to Vertical Slices architecture

--- a/remote-pokedex.csproj
+++ b/remote-pokedex.csproj
@@ -10,4 +10,8 @@
     <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Pokemons\" />
+  </ItemGroup>
+
 </Project>
