Added service URLs in app settings

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServicesURL": {
+    "PokeAPI": "https://pokeapi.co/api/v2/",
+    "FunTranslations": "https://api.funtranslations.com/translate/"
+  }
 }
