--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ServicesURL": {
+    "PokeAPI": "https://pokeapi.co/api/v2/",
+    "FunTranslations": "https://api.funtranslations.com/translate/"
+  } 
 }
