--- a/remote-pokedex.csproj
+++ b/remote-pokedex.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Pokemons\" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
   </ItemGroup>
 
 </Project>
