corrected base API urls paths

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ServicesURL": {
-    "PokeAPI": "https://pokeapi.co/api/v2/",
-    "FunTranslations": "https://api.funtranslations.com/translate/"
+    "PokeAPI": "https://pokeapi.co/api/v2",
+    "FunTranslations": "https://api.funtranslations.com/translate"
   }
 }
