--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ServicesURL": {
-    "PokeAPI": "https://pokeapi.co/api/v2/",
-    "FunTranslations": "https://api.funtranslations.com/translate/"
+    "PokeAPI": "https://pokeapi.co/api/v2",
+    "FunTranslations": "https://api.funtranslations.com/translate"
   } 
 }
